2008-02-10  Daiki Ueno  <ueno@unixuser.org>

	* epg-config.el: Expand the contents of epg-package-info.el.
	(epg-package-name): New constant.
	(epg-version-number): New constant.
	(epg-bug-report-address): New constant.

	* epa-mail.el (epa-mail-mode): Add autoload cookie.
	(epa-global-mail-mode): New global minor mode.

	* epa-file.el (epa-file-mode): New global minor mode.

	* epa-dired.el (epa-dired-mode): New global minor mode.

	* epa.el (epa-menu): New variable.
	(epa-menu-items): New variable.
	(epa-menu-mode): New global minor mode.
	(epa-global-minor-modes): New user option.
	(epa-mode): New global minor mode.

2008-02-10  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el: Remove `no-byte-compile' cookie.
	(dbus-call-method, dbus-register-signal, dbus-debug)
	(dbus-registered-functions-table): Declare them with
	`declare-function' or `defvar', respectively.
	(top): Don't assert any longer.  Require 'cl when compiling.
	Apply `ignore-errors' but `dbus-ignore-errors'.

2008-02-10  Dan Nicolaescu  <dann@ics.uci.edu>

	* diff-mode.el (diff-add-change-log-entries-other-window): Use
	add-change-log-entry.

2008-02-09  Jason Rumney  <jasonr@gnu.org>

	* button.el (button-map):
	* wid-edit.el (widget-keymap): Avoid line-end confusion in autoloads.
	* ldefs-bool.el: Regenerate.

2008-02-09  Dan Nicolaescu  <dann@ics.uci.edu>

	* epa.el (epa-faces, epa):
	* epa-file.el (epa-file):
	* epg-config.el (epg): Add :version.

2008-02-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* vc.el (vc-exec-after): Append CODE to previous fragments.
	(vc-diff-finish): Take BUFFER directly, not BUFFER-NAME;
	take MESSAGES instead of VERBOSE; use it when non-nil.
	(vc-diff-internal): Compute messages once; use them;
	update call to vc-diff-finish.

2008-02-09  Michael Olson  <mwolson@gnu.org>

	* net/tramp.el (tramp-process-sentinel): Avoid error when process
	buffer has been killed, such as by
	`tramp-cleanup-all-connections'.

2008-02-09  Miles Bader  <miles@gnu.org>
